[gd_scene load_steps=16 format=3 uid="uid://kldg6jp7vsw1"]

[ext_resource type="Script" path="res://scripts/puck_controller.gd" id="1_37wa6"]
[ext_resource type="Texture2D" uid="uid://bq1qxmnhrikwk" path="res://assets/palette/didi4/didi4_b.png" id="2_oq76g"]
[ext_resource type="Script" path="res://scripts/arrow.gd" id="3_y662i"]
[ext_resource type="PackedScene" uid="uid://bwq6gmw80mybm" path="res://UI/coin/coin_ui.tscn" id="4_8lbme"]
[ext_resource type="Shader" path="res://shaders/distortion.gdshader" id="5_uktsy"]
[ext_resource type="Texture2D" uid="uid://caqlaw0dt5s2r" path="res://assets/mask_soft_round_ring.jpg" id="6_kn6ul"]
[ext_resource type="Texture2D" uid="uid://dql1t3jv4rkxf" path="res://assets/palette/didi4/didi4_b_r.png" id="7_vmh24"]
[ext_resource type="Texture2D" uid="uid://pxbidx5jf3v6" path="res://assets/UI/IconsFlat-16.png" id="8_l3dt4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nt6t6"]
friction = 0.18
bounce = 0.55

[sub_resource type="AtlasTexture" id="AtlasTexture_34bsi"]
atlas = ExtResource("2_oq76g")
region = Rect2(321, 129, 14, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_lebvo"]
radius = 29.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l07bo"]
atlas = ExtResource("2_oq76g")
region = Rect2(384, 176, 16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8vg4s"]
shader = ExtResource("5_uktsy")
shader_parameter/scroll = Vector2(0, 0)
shader_parameter/strength = 0.0
shader_parameter/useMask = false

[sub_resource type="AtlasTexture" id="AtlasTexture_rautn"]
atlas = ExtResource("7_vmh24")
region = Rect2(528, 352, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_466m6"]
atlas = ExtResource("8_l3dt4")
region = Rect2(144, 128, 16, 16)

[node name="PlayerPuck" type="Node2D"]
texture_filter = 1

[node name="PuckBody" type="RigidBody2D" parent="."]
process_mode = 3
physics_interpolation_mode = 1
collision_layer = 16
collision_mask = 33
input_pickable = true
mass = 1.2
physics_material_override = SubResource("PhysicsMaterial_nt6t6")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
linear_damp = 0.7
script = ExtResource("1_37wa6")

[node name="PuckSprite" type="Sprite2D" parent="PuckBody"]
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_34bsi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PuckBody"]
shape = SubResource("CircleShape2D_lebvo")

[node name="MainCamera" type="Camera2D" parent="PuckBody"]
zoom = Vector2(0.9, 0.9)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="Arrow" type="Sprite2D" parent="PuckBody"]
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_l07bo")
offset = Vector2(0, -25)
script = ExtResource("3_y662i")

[node name="CoinUI" parent="PuckBody" instance=ExtResource("4_8lbme")]
visible = false
offset_left = -53.0
offset_top = 32.0
offset_right = 107.0
offset_bottom = 96.0
scale = Vector2(0.68, 0.68)

[node name="Shockwave" type="Sprite2D" parent="PuckBody"]
z_index = 2
material = SubResource("ShaderMaterial_8vg4s")
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_kn6ul")

[node name="Timer" type="Timer" parent="PuckBody"]
process_mode = 1
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="ResetProgress" type="TextureProgressBar" parent="PuckBody"]
visible = false
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 0.5
step = 0.01
fill_mode = 4
radial_initial_angle = 284.4
texture_under = SubResource("AtlasTexture_rautn")
texture_progress = SubResource("AtlasTexture_466m6")
tint_progress = Color(0.862745, 0.996078, 0.811765, 1)

[connection signal="body_entered" from="PuckBody" to="PuckBody" method="_on_body_entered"]
[connection signal="timeout" from="PuckBody/Timer" to="PuckBody" method="_on_timer_timeout"]
